post refactor cleanup: fixed support file links in backgrounds suite
--HG--
rename : css-backgrounds-3/background-color-transparent.html => work-in-progress/ttwf_shanghai/Zourui/background-color-transparent.html
rename : css-backgrounds-3/background-origin.html => work-in-progress/ttwf_shanghai/Zourui/background-origin.html
rename : css-backgrounds-3/reference/background-color-transparent.html => work-in-progress/ttwf_shanghai/Zourui/reference/background-color-transparent.html
rename : css-backgrounds-3/reference/background-origin.html => work-in-progress/ttwf_shanghai/Zourui/reference/background-origin.html

--- a/css-backgrounds-3/background-repeat-space-padding-box.htm
+++ b/css-backgrounds-3/background-repeat-space-padding-box.htm
@@ -24,7 +24,7 @@
                 padding: 25px;
                 border: 25px double black;
                 background-origin: padding-box;
-                background-image: url("../support/green_color.png");
+                background-image: url("support/green_color.png");
                 background-repeat: no-repeat;
                 background-repeat: space;
             }
