--- a/css-backgrounds-3/background-size-002.htm
+++ b/css-backgrounds-3/background-size-002.htm
@@ -12,7 +12,7 @@
                 width: 100px;
                 height: 100px;
                 background-repeat: no-repeat;
-                background-image: url("../support/red_color.png");
+                background-image: url("support/red_color.png");
                 background-size: 50px auto;
             }
             .reference
