--- a/css-backgrounds-3/background-size-applies-to-block.htm
+++ b/css-backgrounds-3/background-size-applies-to-block.htm
@@ -14,7 +14,7 @@
                 width: 2in;
                 border: 20px solid black;
                 padding: 20px;
-                background: url("../support/black_color.png") no-repeat red;
+                background: url("support/black_color.png") no-repeat red;
                 background-size: 100% 100%;
             }
         </style>
