--- a/css-backgrounds-3/background_position_three_four_values.htm
+++ b/css-backgrounds-3/background_position_three_four_values.htm
@@ -13,7 +13,7 @@
                 height: 2in;
                 border: thick solid black;
                 margin: 10px;
-                background-image: url("../support/blue_color.png");
+                background-image: url("support/blue_color.png");
                 background-repeat: no-repeat;
             }
             .reference
