--- a/css-backgrounds-3/background_properties_greater_than_images.htm
+++ b/css-backgrounds-3/background_properties_greater_than_images.htm
@@ -16,13 +16,13 @@
             }
             #test
             {
-                background-image: url("../support/aqua_color.png"), url("../support/orange_color.png"), url("../support/green_color.png");
+                background-image: url("support/aqua_color.png"), url("support/orange_color.png"), url("support/green_color.png");
                 background-position: right bottom, right top, left bottom, left center, right center;
                 background-repeat: no-repeat, no-repeat, repeat-x, repeat, repeat-y;
             }
             #reference
             {
-                background-image: url("../support/aqua_color.png"), url("../support/orange_color.png"), url("../support/green_color.png");
+                background-image: url("support/aqua_color.png"), url("support/orange_color.png"), url("support/green_color.png");
                 background-position: right bottom, right top, left bottom;
                 background-repeat: no-repeat, no-repeat, repeat-x;
             }
