--- a/css-backgrounds-3/background_repeat_space_border_box.htm
+++ b/css-backgrounds-3/background_repeat_space_border_box.htm
@@ -14,7 +14,7 @@
                 padding: 25px;
                 border: 25px double black;
                 background-origin: border-box;
-                background-image: url("../support/green_color.png"), url("../support/space_border_box.png");
+                background-image: url("support/green_color.png"), url("../support/space_border_box.png");
                 background-repeat: no-repeat;
                 background-repeat: space, no-repeat;
             }
