--- a/css-backgrounds-3/none-as-image-layer.htm
+++ b/css-backgrounds-3/none-as-image-layer.htm
@@ -16,13 +16,13 @@
             }
             #test
             {
-                background-image: url("../support/blue_color.png"), none, url("../support/green_color.png");
+                background-image: url("support/blue_color.png"), none, url("support/green_color.png");
                 background-repeat: no-repeat, repeat, no-repeat;
                 background-position: 30px 30px, 60px 60px, 90px 90px;
             }
             #reference
             {
-                background-image: url("../support/blue_color.png"), url("../support/green_color.png");
+                background-image: url("support/blue_color.png"), url("support/green_color.png");
                 background-repeat: no-repeat, no-repeat;
                 background-position: 30px 30px, 90px 90px;
             }
