--- a/css-backgrounds-3/order-of-images.htm
+++ b/css-backgrounds-3/order-of-images.htm
@@ -11,7 +11,7 @@
             {
                 width: 250px;
                 height: 250px;
-                background-image: url("../support/blue_color.png"), url("../support/orange_color.png"), url("../support/black_color.png");
+                background-image: url("support/blue_color.png"), url("support/orange_color.png"), url("support/black_color.png");
                 background-repeat: no-repeat;
                 background-position: 30px 30px, 60px 60px, 90px 90px;
             }
