--- a/css-backgrounds-3/ttwf-reftest-borderRadius.html
+++ b/css-backgrounds-3/ttwf-reftest-borderRadius.html
@@ -4,7 +4,7 @@
     <title>Test Background and border</title>
     <link rel="author reviewer" title="Jinlong Zhang" href="mailto:jinlongz@oupeng.com">
     <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius-tables">
-    <link rel="match" href="reference/ttwf-reftest-tutorial-starter-ref">
+    <link rel="match" href="reference/ttwf-reftest-borderRadius-ref.html">
     <meta name="assert" content="Table with 'border-collapse: collapse;' declaration, it's 'border-radius' style will not work.">
     <style type="text/css">
         #testCon{border: 4px solid green; border-radius: 5px; border-collapse: collapse;}
