--- a/css-backgrounds-3/background_color_padding_box.htm
+++ b/css-backgrounds-3/background_color_padding_box.htm
@@ -13,7 +13,7 @@
                 height: 250px;
                 border: 10px dashed purple;
                 padding: 10px;
-                background-image: url("../support/blue_color.png"), url("../support/orange_color.png"), url("../support/white_color.png");
+                background-image: url("support/blue_color.png"), url("support/orange_color.png"), url("support/white_color.png");
                 background-repeat: no-repeat;
                 background-clip: border-box, border-box, padding-box;
                 background-position: 30px 30px, 60px 60px, 90px 90px;
