--- a/css-shapes-1/shape-outside/shape-image/shape-image-018.html
+++ b/css-shapes-1/shape-outside/shape-image/shape-image-018.html
@@ -37,7 +37,7 @@
 <body>
     <p>The test passes if no red is visible.</p>
     <div id="container">
-        <img id="image" src="support/half-rectangle.jpg"/>
+        <img id="image" src="support/left-half-rectangle.jpg"/>
         X<br>X<br>X<br>X
         <div id="failure">
             X<br>X<br>X<br><span style="margin-left: 120px">X
