--- a/media-source/SourceBuffer-appendWindowEnd_invalid.html
+++ b/media-source/SourceBuffer-appendWindowEnd_invalid.html
@@ -14,36 +14,54 @@
 
 <script>
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var mimes = ['video/webm; codecs="vorbis,vp8"', 'video/mp4'];
 
-async_test(function(t) {
-    var mediaSource = new MediaSource();
-    mediaSource.addEventListener('sourceopen', function(e) {
-        var sourceBuffer = mediaSource.addSourceBuffer(mime);
-        t.step(function() {
-            assert_throws({name: 'InvalidAccessError'},
-                          function() {
-                              sourceBuffer.appendWindowEnd = Number.NaN;
-                          },
-                          'The new value is NaN');
-            assert_throws({name: 'InvalidAccessError'},
-                          function() {
-                              sourceBuffer.appendWindowStart = 1;
-                              sourceBuffer.appendWindowEnd = sourceBuffer.appendWindowStart - 1;
-                          },
-                          'The new value is less than appendWindowStart');
-            assert_throws({name: 'InvalidAccessError'},
-                          function() {
-                              sourceBuffer.appendWindowEnd = sourceBuffer.appendWindowStart;
-                          },
-                          'The new value is equal to appendWindowStart');
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
         });
-        t.done();
-    });
-    video.src = window.URL.createObjectURL(mediaSource);
-},
-'SourceBuffer#appendWindowEnd : If the new value equals NaN, INVALID_ACCESS_ERR exception should be thrown.' +
-'If the new value is less than or equal to appendWindowStart, INVALID_ACCESS_ERR exception should be thrown.');
+        this.done();
+        return false;
+    }
+    return true;
+}
+function test(mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        var mediaSource = new MediaSource();
+        mediaSource.addEventListener('sourceopen', function(e) {
+            var sourceBuffer = mediaSource.addSourceBuffer(mime);
+            t.step(function() {
+                assert_throws({name: 'InvalidAccessError'},
+                              function() {
+                                  sourceBuffer.appendWindowEnd = Number.NaN;
+                              },
+                              'The new value is NaN');
+                assert_throws({name: 'InvalidAccessError'},
+                              function() {
+                                  sourceBuffer.appendWindowStart = 1;
+                                  sourceBuffer.appendWindowEnd = sourceBuffer.appendWindowStart - 1;
+                              },
+                              'The new value is less than appendWindowStart');
+                assert_throws({name: 'InvalidAccessError'},
+                              function() {
+                                  sourceBuffer.appendWindowEnd = sourceBuffer.appendWindowStart;
+                              },
+                              'The new value is equal to appendWindowStart');
+            });
+            t.done();
+        });
+        video.src = window.URL.createObjectURL(mediaSource);
+    }, 'SourceBuffer#appendWindowEnd (' + mime + ') : If the new value equals NaN, INVALID_ACCESS_ERR exception should be thrown.' +
+       'If the new value is less than or equal to appendWindowStart, INVALID_ACCESS_ERR exception should be thrown.');
+}
+mimes.forEach(function(mime) {
+    test(mime);
+});
 </script>
 </body>
 </html>
