--- a/media-source/SourceBuffer-appendWindowStart_invalid.html
+++ b/media-source/SourceBuffer-appendWindowStart_invalid.html
@@ -14,38 +14,57 @@
 
 <script>
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var mimes = ['video/webm; codecs="vorbis,vp8"', 'video/mp4'];
 
-async_test(function(t) {
-    var mediaSource = new MediaSource();
-    mediaSource.addEventListener('sourceopen', function(e){
-        var sourceBuffer = mediaSource.addSourceBuffer(mime);
-        t.step(function() {
-            assert_throws({name: 'InvalidAccessError'},
-                          function() {
-                              sourceBuffer.appendWindowStart = -1;
-                          },
-                          'The new value is less than 0');
-            assert_throws({name: 'InvalidAccessError'},
-                          function() {
-                              sourceBuffer.appendWindowStart = 0;
-                              sourceBuffer.appendWindowEnd = 1;
-                              sourceBuffer.appendWindowStart = sourceBuffer.appendWindowEnd + 1;
-                          },
-                          'The new value is greater than appendWindowEnd');
-            assert_throws({name: 'InvalidAccessError'},
-                          function() {
-                              sourceBuffer.appendWindowStart = 0;
-                              sourceBuffer.appendWindowEnd = 1;
-                              sourceBuffer.appendWindowStart = sourceBuffer.appendWindowEnd;
-                          },
-                          'The new value is equal to appendWindowEnd');
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
         });
-        t.done();
-    });
-    video.src = window.URL.createObjectURL(mediaSource);
-},
-'SourceBuffer#appendWindowStart : If the new value is less than 0 or greater than or equal to appendWindowEnd, INVALID_ACCESS_ERR exception should be thrown.');
+        this.done();
+        return false;
+    }
+    return true;
+}
+function test(mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        var mediaSource = new MediaSource();
+        mediaSource.addEventListener('sourceopen', function(e) {
+            var sourceBuffer = mediaSource.addSourceBuffer(mime);
+            t.step(function() {
+                assert_throws({name: 'InvalidAccessError'},
+                              function() {
+                                  sourceBuffer.appendWindowStart = -1;
+                              },
+                              'The new value is less than 0');
+                assert_throws({name: 'InvalidAccessError'},
+                              function() {
+                                  sourceBuffer.appendWindowStart = 0;
+                                  sourceBuffer.appendWindowEnd = 1;
+                                  sourceBuffer.appendWindowStart = sourceBuffer.appendWindowEnd + 1;
+                              },
+                              'The new value is greater than appendWindowEnd');
+                assert_throws({name: 'InvalidAccessError'},
+                              function() {
+                                  sourceBuffer.appendWindowStart = 0;
+                                  sourceBuffer.appendWindowEnd = 1;
+                                  sourceBuffer.appendWindowStart = sourceBuffer.appendWindowEnd;
+                              },
+                              'The new value is equal to appendWindowEnd');
+            });
+            t.done();
+        });
+        video.src = window.URL.createObjectURL(mediaSource);
+    }, 'SourceBuffer#appendWindowStart (' + mime + '): If the new value is less than 0 or greater than or equal to appendWindowEnd,' +
+       'INVALID_ACCESS_ERR exception should be thrown.');
+}
+mimes.forEach(function(mime) {
+    test(mime);
+});
 </script>
 </body>
 </html>
