--- a/media-source/SourceBuffer-timestampOffset_removed.html
+++ b/media-source/SourceBuffer-timestampOffset_removed.html
@@ -13,23 +13,9 @@
 <div id="log"></div>
 
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var mimes = ['video/webm; codecs="vorbis,vp8"', 'video/mp4'];
 
-function GET(url, processBody) {
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', url, true);
-    xhr.responseType = 'arraybuffer';
-    xhr.send();
-    xhr.onload = function(e) {
-        if (xhr.status != 200) {
-            alert("Unexpected status code " + xhr.status + " for " + url);
-            return false;
-        }
-        processBody(new Uint8Array(xhr.response));
-    };
-}
 //check the browser supports the MIME used in this test
 function canPlayType(mime) {
     if(video.canPlayType(mime) != 'probably') {
@@ -41,11 +27,11 @@ function canPlayType(mime) {
     }
     return true;
 }
-async_test(function(t) {
-    if(!canPlayType.bind(t)(mime)) {
-        return;
-    }
-    GET(FILE, function(data) {
+function test(mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
         var mediaSource = new MediaSource();
         mediaSource.addEventListener('sourceopen', function(e) {
             var sourceBuffer = mediaSource.addSourceBuffer(mime);
@@ -60,10 +46,13 @@ async_test(function(t) {
             t.done();
         });
         video.src = window.URL.createObjectURL(mediaSource);
-    });
-},
-'Setting SourceBuffer#timestampOffset : If sourceBuffer object has been removed from the sourceBuffers attribute of the parent media source, ' +
-'then INVALID_STATE_ERR exception should be thrown.');
+    }, 'Setting SourceBuffer#timestampOffset (' + mime + '): ' +
+       'If sourceBuffer object has been removed from the sourceBuffers attribute of the parent media source, ' +
+       'then INVALID_STATE_ERR exception should be thrown.');
+}
+mimes.forEach(function(mime) {
+    test(mime);
+});
 </script>
 </body>
 </html>
