--- a/media-source/SourceBuffer-mode_removed.html
+++ b/media-source/SourceBuffer-mode_removed.html
@@ -14,7 +14,7 @@
 
 <script>
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var mimes = ['video/webm; codecs="vorbis,vp8"', 'video/mp4'];
 
 //check the browser supports the MIME used in this test
 function canPlayType(mime) {
@@ -27,27 +27,32 @@ function canPlayType(mime) {
     }
     return true;
 }
-async_test(function(t) {
-    if(!canPlayType.bind(t)(mime)) {
-        return;
-    }
-    var mediaSource = new MediaSource();
-    mediaSource.addEventListener('sourceopen', function(e){
-        var sourceBuffer = mediaSource.addSourceBuffer(mime);
-        mediaSource.removeSourceBuffer(sourceBuffer);
-        t.step(function() {
-            assert_throws({name: 'InvalidStateError'},
-                          function() {
-                              sourceBuffer.mode = 'sequence';
-                          },
-                          'Check for setting mode value of removed sourceBuffer object.');
+function test(mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        var mediaSource = new MediaSource();
+        mediaSource.addEventListener('sourceopen', function(e) {
+            var sourceBuffer = mediaSource.addSourceBuffer(mime);
+            mediaSource.removeSourceBuffer(sourceBuffer);
+            t.step(function() {
+                assert_throws({name: 'InvalidStateError'},
+                              function() {
+                                  sourceBuffer.mode = 'sequence';
+                              },
+                              'Check for setting mode value of removed sourceBuffer object.');
+            });
+            t.done();
         });
-        t.done();
-    });
-    video.src = window.URL.createObjectURL(mediaSource);
-},
-'Setting SourceBuffer#mode : If sourceBuffer object has been removed from the sourceBuffers attribute of the parent media source, ' +
-'then INVALID_STATE_ERR exception should be thrown.');
+        video.src = window.URL.createObjectURL(mediaSource);
+    }, 'Setting SourceBuffer#mode (' + mime + ') : ' +
+       'If sourceBuffer object has been removed from the sourceBuffers attribute of the parent media source, ' +
+       'then INVALID_STATE_ERR exception should be thrown.');
+}
+mimes.forEach(function(mime) {
+    test(mime);
+});
 </script>
 </body>
 </html>
