--- a/media-source/SourceBuffer-buffered_removed.html
+++ b/media-source/SourceBuffer-buffered_removed.html
@@ -13,10 +13,21 @@
 <div id="log"></div>
 
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var contents = {'/media/white.webm': 'video/webm; codecs="vorbis,vp8"',
+                '/media/white.mp4' : 'video/mp4'};
 
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
+        });
+        this.done();
+        return false;
+    }
+    return true;
+}
 function GET(url, processBody) {
     var xhr = new XMLHttpRequest();
     xhr.open('GET', url, true);
@@ -30,32 +41,34 @@ function GET(url, processBody) {
         processBody(new Uint8Array(xhr.response));
     };
 }
-async_test(function(t) {
-    GET(FILE, function(data) {
-        var mediaSource = new MediaSource();
-        var num_updateend = 0;
-        mediaSource.addEventListener('sourceopen', function(e){
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            sourceBuffer.addEventListener('updateend', function(e) {
-                if(!num_updateend) {
-                    t.step(function() {
-                        assert_throws({name: 'InvalidStateError'},
-                                      function() {
-                                          mediaSource.removeSourceBuffer(sourceBuffer);
-                                          sourceBuffer.buffered;
-                                      },
-                                      'After removing the sourceBuffer object, read the buffered attribute');
-                    });
-                    t.done();
-                }
-                num_updateend++;
+function test(file, mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        GET(file, function(data) {
+            var mediaSource = new MediaSource();
+            mediaSource.addEventListener('sourceopen', function(e) {
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
+                mediaSource.removeSourceBuffer(sourceBuffer);
+                t.step(function() {
+                    assert_throws({name: 'InvalidStateError'},
+                                  function() {
+                                      sourceBuffer.buffered;
+                                  },
+                                  'After removing the sourceBuffer object, read the buffered attribute');
+                });
+                t.done();
             });
-            sourceBuffer.appendBuffer(data);
+            video.src = window.URL.createObjectURL(mediaSource);
         });
-        video.src = window.URL.createObjectURL(mediaSource);
-    });
-},
-'SourceBuffer#buffered : If this object has been removed from the sourceBuffers attribute of the parent media source, then INVALID_STATE_ERR exception should be thrown');
+    }, 'SourceBuffer#buffered (' + mime + ') : ' +
+       'If this object has been removed from the sourceBuffers attribute of the parent media source, ' +
+       'then INVALID_STATE_ERR exception should be thrown');
+}
+for(var file in contents) {
+    test(file, contents[file]);
+}
 </script>
 </body>
 </html>
