--- a/media-source/SourceBuffer-abort-updating.html
+++ b/media-source/SourceBuffer-abort-updating.html
@@ -13,9 +13,9 @@
 <div id="log"></div>
 
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var contents = {'/media/white.webm': 'video/webm; codecs="vorbis,vp8"',
+                '/media/white.mp4' : 'video/mp4'};
 
 function GET(url, processBody) {
     var xhr = new XMLHttpRequest();
@@ -41,58 +41,62 @@ function canPlayType(mime) {
     }
     return true;
 }
-async_test(function(t) {
-    if(!canPlayType.bind(t)(mime)) {
-        return;
-    }
-    GET(FILE, function(data) {
-        var mediaSource = new MediaSource();
-        var num_updateend = 0;
-        var events = [];
-        mediaSource.addEventListener('sourceopen', function(e){
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            t.step(function() {
-                assert_equals(sourceBuffer.updating, false);
-            });
-            sourceBuffer.addEventListener('updatestart', function(e) {
-                events.push('updatestart');
-                //abort when sourceBuffer#updating is true
-                sourceBuffer.abort();
-
+function test(file, mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        GET(file, function(data) {
+            var mediaSource = new MediaSource();
+            var num_updateend = 0;
+            var events = [];
+            mediaSource.addEventListener('sourceopen', function(e) {
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
                 t.step(function() {
-                    assert_equals(sourceBuffer.updating, false,
-                                  'Check updating value after calling abort.');
-                    assert_equals(sourceBuffer.appendWindowStart, 0);
-                    assert_equals(sourceBuffer.appendWindowEnd, Number.POSITIVE_INFINITY);
+                    assert_equals(sourceBuffer.updating, false);
                 });
+                sourceBuffer.addEventListener('updatestart', function(e) {
+                    events.push('updatestart');
+                    //abort when sourceBuffer#updating is true
+                    sourceBuffer.abort();
+
+                    t.step(function() {
+                        assert_equals(sourceBuffer.updating, false,
+                                      'Check updating value after calling abort.');
+                        assert_equals(sourceBuffer.appendWindowStart, 0);
+                        assert_equals(sourceBuffer.appendWindowEnd, Number.POSITIVE_INFINITY);
+                    });
+                });
+                sourceBuffer.addEventListener('update', function(e) {
+                    assert_unreached("Can't touch this");
+                });
+                sourceBuffer.addEventListener('updateend', function(e) {
+                    events.push('updateend');
+                    mediaSource.endOfStream();
+                });
+                sourceBuffer.addEventListener('abort', function(e) {
+                    events.push('abort');
+                });
+                sourceBuffer.addEventListener('error', function(e) {
+                    assert_unreached("Can't touch this");
+                });
+                sourceBuffer.appendBuffer(data);
             });
-            sourceBuffer.addEventListener('update', function(e) {
-                assert_unreached("Can't touch this");
+            mediaSource.addEventListener('sourceended', function(e) {
+                t.step(function() {
+                    assert_array_equals(events,
+                                        ['updatestart', 'abort', 'updateend'],
+                                        'Check the sequence of fired events.');
+                });
+                t.done();
             });
-            sourceBuffer.addEventListener('updateend', function(e) {
-                events.push('updateend');
-                mediaSource.endOfStream();
-            });
-            sourceBuffer.addEventListener('abort', function(e) {
-                events.push('abort');
-            });
-            sourceBuffer.addEventListener('error', function(e) {
-                assert_unreached("Can't touch this");
-            });
-            sourceBuffer.appendBuffer(data);
+            video.src = window.URL.createObjectURL(mediaSource);
         });
-        mediaSource.addEventListener('sourceended', function(e){
-            t.step(function() {
-                assert_array_equals(events,
-                                    ['updatestart', 'abort', 'updateend'],
-                                   'Check the sequence of fired events.');
-            });
-            t.done();
-        });
-        video.src = window.URL.createObjectURL(mediaSource);
-    });
-},
-'SourceBuffer#abort() : Check the algorithm when the updating attribute is true.');
+    }, 'SourceBuffer#abort() (' + mime + ') : Check the algorithm when the updating attribute is true.');
+}
+for(var file in contents) {
+    test(file, contents[file]);
+}
 </script>
 </body>
 </html>
