--- a/media-source/SourceBuffer-remove_events.html
+++ b/media-source/SourceBuffer-remove_events.html
@@ -13,10 +13,21 @@
 <div id="log"></div>
 
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var contents = {'/media/white.webm': 'video/webm; codecs="vorbis,vp8"',
+                '/media/white.mp4' : 'video/mp4'};
 
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
+        });
+        this.done();
+        return false;
+    }
+    return true;
+}
 function GET(url, processBody) {
     var xhr = new XMLHttpRequest();
     xhr.open('GET', url, true);
@@ -30,45 +41,53 @@ function GET(url, processBody) {
         processBody(new Uint8Array(xhr.response));
     };
 }
-async_test(function(t) {
-    GET(FILE, function(data) {
-        var mediaSource = new MediaSource();
-        var num_updateend = 0;
-        var events = [];
-        mediaSource.addEventListener('sourceopen', function(e){
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            sourceBuffer.addEventListener('updatestart', function(e) {
-                events.push('updatestart');
-            });
-            sourceBuffer.addEventListener('update', function(e) {
-                events.push('update');
-                t.step(function() {
-                    assert_equals(sourceBuffer.updating, false);
+function test(file, mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        GET(file, function(data) {
+            var mediaSource = new MediaSource();
+            var num_updateend = 0;
+            var events = [];
+            mediaSource.addEventListener('sourceopen', function(e) {
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
+                sourceBuffer.addEventListener('updatestart', function(e) {
+                    events.push('updatestart');
                 });
+                sourceBuffer.addEventListener('update', function(e) {
+                    events.push('update');
+                    t.step(function() {
+                        assert_equals(sourceBuffer.updating, false);
+                    });
+                });
+                sourceBuffer.addEventListener('updateend', function(e) {
+                    events.push('updateend');
+                    if(!num_updateend) {
+                        this.remove(1,2);
+                    } else {
+                        mediaSource.endOfStream();
+                    }
+                    num_updateend++;
+                });
+                sourceBuffer.appendBuffer(data);
             });
-            sourceBuffer.addEventListener('updateend', function(e) {
-                events.push('updateend');
-                if(!num_updateend) {
-                    this.remove(1,2);
-                } else {
-                    mediaSource.endOfStream();
-                }
-                num_updateend++;
+            mediaSource.addEventListener('sourceended', function(e) {
+                t.step(function() {
+                    assert_array_equals(events,
+                                        ['updatestart','update','updateend',
+                                         'updatestart','update','updateend']);
+                });
+                t.done();
             });
-            sourceBuffer.appendBuffer(data);
+            video.src = window.URL.createObjectURL(mediaSource);
         });
-        mediaSource.addEventListener('sourceended', function(e){
-            t.step(function() {
-                assert_array_equals(events,
-                                    ['updatestart','update','updateend',
-                                     'updatestart','update','updateend']);
-            });
-            t.done();
-        });
-        video.src = window.URL.createObjectURL(mediaSource);
-    });
-},
-'SourceBuffer#remove(start, end) : Check the fired event sequence for sourceBuffer after calling SourceBuffer#remove function.');
+    }, 'SourceBuffer#remove(start, end) (' + mime + ') : ' +
+       'Check the fired event sequence for sourceBuffer after calling SourceBuffer#remove function.');
+}
+for(var file in contents) {
+    test(file, contents[file]);
+}
 </script>
 </body>
 </html>
