--- a/media-source/SourceBuffer-remove_invalid-start.html
+++ b/media-source/SourceBuffer-remove_invalid-start.html
@@ -13,10 +13,21 @@
 <div id="log"></div>
 
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var contents = {'/media/white.webm': 'video/webm; codecs="vorbis,vp8"',
+                '/media/white.mp4' : 'video/mp4'};
 
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
+        });
+        this.done();
+        return false;
+    }
+    return true;
+}
 function GET(url, processBody) {
     var xhr = new XMLHttpRequest();
     xhr.open('GET', url, true);
@@ -30,32 +41,39 @@ function GET(url, processBody) {
         processBody(new Uint8Array(xhr.response));
     };
 }
-async_test(function(t) {
-    GET(FILE, function(data) {
-        var mediaSource = new MediaSource();
-        mediaSource.addEventListener('sourceopen', function(e){
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            sourceBuffer.addEventListener('updateend', function(e) {
-                t.step(function() {
-                    assert_throws({name: 'InvalidAccessError'},
-                                  function() {
-                                      sourceBuffer.remove(-1, 0.5);
-                                  },
-                                  'SourceBuffer#remove(negativeStart, end)');
-                    assert_throws({name: 'InvalidAccessError'},
-                                  function() {
-                                      sourceBuffer.remove(mediaSource.duration + 1, 0.5);
-                                  },
-                                  'SourceBuffer#remove(out_range_start, end)');
+function test(file, mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        GET(file, function(data) {
+            var mediaSource = new MediaSource();
+            mediaSource.addEventListener('sourceopen', function(e) {
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
+                sourceBuffer.addEventListener('updateend', function(e) {
+                    t.step(function() {
+                        assert_throws({name: 'InvalidAccessError'},
+                                      function() {
+                                          sourceBuffer.remove(-1, 0.5);
+                                      },
+                                      'SourceBuffer#remove(negativeStart, end)');
+                        assert_throws({name: 'InvalidAccessError'},
+                                      function() {
+                                          sourceBuffer.remove(Number.POSITIVE_INFINITY, 0.5);
+                                      },
+                                      'SourceBuffer#remove(out_range_start, end)');
+                    });
+                    t.done();
                 });
-                t.done();
+                sourceBuffer.appendBuffer(data);
             });
-            sourceBuffer.appendBuffer(data);
+            video.src = window.URL.createObjectURL(mediaSource);
         });
-        video.src = window.URL.createObjectURL(mediaSource);
-    });
-},
-'SourceBuffer#remove(invalidStart, end) :  If start is invalid, InvalidAccessError should be thrown');
+    }, 'SourceBuffer#remove(invalidStart, end) (' + mime + ') : If start is invalid, InvalidAccessError should be thrown');
+}
+for(var file in contents) {
+    test(file, contents[file]);
+}
 </script>
 </body>
 </html>
